--- a/.classpath
+++ b/.classpath
@@ -2,6 +2,6 @@
 <classpath>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="lib" path="lib/mysql-connector-java-8.0.28.jar"/>
+	<classpathentry kind="lib" path="lib/mysql-connector-java-8.0.28.jar" sourcepath="C:/Users/1000075567/.m2/repository/mysql/mysql-connector-java/8.0.28/mysql-connector-java-8.0.28-sources.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
